# ClipSoon

./: .gitignore  ClipSoon.spec  README.md  build_macos.command  build_windows.bat  pyproject.toml  run.bat  run.command
.github/workflows/: release.yml
clipsoon/: __init__.py  __main__.py  app.py  core.py  launcher.py  search.py  system.py  ui.py  windows_clipboard_host.py  windows_focus_host.py  windows_hotkey_host.py  windows_paste_host.py  windows_workers.py
docs/: 产品规格与验收.md  架构设计.md  竞品调研.md  验收报告.md
scripts/: build_macos.command  build_windows.bat  run_macos.command  run_windows.bat  smoke_windows_helpers.py
tests/: test_app.py  test_core.py  test_launcher.py  test_release.py  test_system.py  test_ui.py  test_windows_clipboard_host.py  test_windows_focus_host.py  test_windows_hotkey_host.py  test_windows_paste_host.py  test_windows_workers.py
